# kvbiii-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.sh
.github/: dependabot.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: dependabot-auto-merge.yml  python-publish.yml
kvbiii_ml/: __init__.py
kvbiii_ml/data_processing/data_imputation/: joint_distribution_imputation.py  statistical_association_imputation.py
kvbiii_ml/data_processing/eda/: data_analysis.py  data_cleaning.py  data_transformation.py
kvbiii_ml/data_processing/feature_engineering/: case_normalizer.py  categorical_aligner.py  categorical_cleaner.py  categories_assigner.py  count_encoding.py  cross_encoding.py  digits_encoding.py  dtypes_converter.py  feature_generation_pipeline.py  numerical_downcaster.py  target_encoding.py
kvbiii_ml/data_processing/feature_selection/: model_importance_filtering.py  model_importance_rfe.py  mutual_information_filtering.py  mutual_information_rfe.py  permutation_feature_importance.py  shap_rfe.py
kvbiii_ml/data_processing/preprocessing/: __init__.py  expansion_base.py
kvbiii_ml/data_processing/sampling/: samplers_comparision.py
kvbiii_ml/evaluation/: custom_metrics_handler.py  error_diagnostics.py  generate_reports.py  metrics.py  shap_values.py
kvbiii_ml/modeling/optimization/: classification_calibration.py  cutoff_tuning.py  ensemble_weights_tuner.py  hyperparameter_tuning.py  pseudo_labeler.py
kvbiii_ml/modeling/training/: base_trainer.py  calibrated_model.py  cross_validation.py  ensemble_model.py  oof_model.py
scripts/: check_requirements.sh
tests/: conftest.py
tests/data_processing/data_imputation/: test_joint_distribution_imputation.py  test_statistical_association_imputation.py
tests/data_processing/eda/: test_data_analysis.py  test_data_cleaning.py  test_data_transformation.py
tests/data_processing/feature_engineering/: test_case_normalizer.py  test_categorical_aligner.py  test_categorical_cleaner.py  test_count_encoding.py  test_cross_encoding.py  test_cross_encoding_extra.py  test_digits_encoding.py  test_dtypes_converter.py  test_feature_generation_pipeline.py  test_numerical_downcaster.py  test_target_encoding.py
tests/data_processing/feature_selection/: test_model_importance_filtering.py  test_model_importance_rfe.py  test_mutual_information_feature_selection_empty.py  test_mutual_information_filtering.py  test_mutual_information_rfe.py  test_permutation_feature_importance.py  test_shap_rfe.py
tests/data_processing/preprocessing/: test_expansion_base.py
tests/data_processing/sampling/: test_samplers_comparision.py
tests/evaluation/: test_error_diagnostics.py  test_generate_reports.py  test_metrics.py  test_shap_values.py  test_shap_values_additional.py
tests/modeling/optimization/: test_classification_calibration.py  test_cutoff_tuning.py  (+4 more)
(+48 files in other folders)
