[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["kvbiii_ml*"]}}

[project]
name = "kvbiii_ml"
version = "0.1.0"
description = "A Python package for machine learning tasks, including data imputation, exploratory data analysis (EDA), evaluation, and optimization."
readme = "README.md"
authors = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
maintainers = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
keywords = ["machine learning", "data science", "data analysis", "feature engineering", "data imputation", "EDA", "evaluation", "optimization"]
dynamic = ["dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "LicenseRef-Proprietary"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/kvbiii/kvbiii-ml"
repository = "https://github.com/kvbiii/kvbiii-ml"