[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["kvbiii_ml", "kvbiii_ml.*"]

[project]
name = "kvbiii_ml"
version = "0.1.0"
description = "A Python package for machine learning tasks, including data imputation, exploratory data analysis (EDA), evaluation, and optimization."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
maintainers = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
keywords = ["data visualization", "plotting", "matplotlib", "seaborn"]
dynamic = ["dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/kvbiii/kvbiii-ml"
Repository = "https://github.com/kvbiii/kvbiii-ml"
Issues = "https://github.com/kvbiii/kvbiii-ml/issues"